@@ -60,6 +60,8 @@
 
 #include <nuttx/config.h>
 
+#include <stdio.h>
+#include <stdlib.h>
 #include <string.h>
 #include <stdint.h>
 
@@ -392,7 +394,7 @@ char *md5_hash(const uint8_t * addr, const size_t len)
   md5_sum(addr, len, digest);
   for (i = 0; i < 16; i++)
     {
-      vsprintf(&hash[i * 2], "%.2x", digest[i]);
+      sprintf(&hash[i * 2], "%.2x", digest[i]);
     }
 
   hash[32] = 0;
